--- a/src/modules/_colors.scss
+++ b/src/modules/_colors.scss
@@ -1,4 +1,6 @@
 $color-white: #FFFFFF;
 $color-gray: #696969;
+$color-gray-light: #f8f8f8;
 $color-gray-line: #ababab;
 $color-green-link: #59b1b7;
+$color-orange-title: #f9ad37;
